--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Dependencies
+/node_modules
+node_modules/
 
+# Environment variables
 .env
-node_modules
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
